# c-by-mosh

./: Bankaccount.cpp  Bankaccount.h  CMakeLists.txt  HelloWorld.cpp  Rectangle.cpp  Rectangle.h  Return_String.cpp  Return_String.h  Textbox.cpp  Textbox.h  lab_tasks.cpp
classes/: Array.cpp  Array.h  Circle.cpp  Circle.h  Length.cpp  Length.h  Poiint.cpp  Poiint.h  Point.cpp  Point.h  Recctangle.cpp  Recctangle.h  Shape.cpp  Shape.h  Smarptr.cpp  Smarptr.h  Textbox.cpp  Textbox.h  Widget.cpp  Widget.h  class_how.cpp  class_how.h  main.cpp  operation_on_points.cpp  operation_on_points.h
utils/: header.h  header.hpp  source.cpp
